<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DibujaFiguras</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dibuja_circulo">Dibuja Circulo</string>
    <string name="title_activity_circulo">Dibuja Circulo</string>
    <string name="title_activity_dibuja_cuadrado">Dibuja Cuadrado / Rectangulo</string>
    <string name="title_activity_cuadrado">Dibuja Cuadrado / Rectangulo</string>
    <string name="title_activity_dibuja_ovalo">Dibuja Ovalo</string>
    <string name="title_activity_ovalo">Dibuja Ovalo</string>
    <string name="title_activity_dibuja_triangulo">Dibuja Triangulo</string>
    <string name="title_activity_triangulo">Dibuja Triangulo</string>
    <string name="dibuja">Dibuja</string>
    <string name="lado1">Introduce la longitud del primer lado</string>
    <string name="lado2">Introduce la longitud del segundo lado</string>
    <string name="radio">Introduce el radio del circulo</string>
	<string name="diam">Introduce el diametro menor</string>
    <string name="diaM">Introduce el diametro mayor</string>
	<string name="coorX">Introduce la coordenada "X" del primer punto</string>
    <string name="coorY">Introduce la coordenada "Y" del primer punto</string>
	<string name="coorX2">Introduce la coordenada "X" del segundo punto</string>
    <string name="coorY2">Introduce la coordenada "Y" del segundo punto</string>
    <string name="coorX3">Introduce la coordenada "X" del tercer punto</string>
    <string name="coorY3">Introduce la coordenada "Y" del tercer punto</string>
</resources>
