<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/lblCoorX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lado1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
         />
    
    <EditText 
        android:id="@+id/TxtCoorX"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:inputType="number"/>

    <TextView 
        android:id="@+id/lblCoorY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lado2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp" />
    
    <EditText 
        android:id="@+id/TxtCoorY"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:inputType="number"/>
    
     <TextView 
        android:id="@+id/lblCoorX2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coorX2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp" />
    
    <EditText 
        android:id="@+id/TxtCoorX2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:inputType="number"/>

    <TextView 
        android:id="@+id/lblCoorY2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coorY2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp" />
    
    <EditText 
        android:id="@+id/TxtCoorY2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:inputType="number"/>
    
    <TextView 
        android:id="@+id/lblCoorX3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coorX3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp" />
    
    <EditText 
        android:id="@+id/TxtCoorX3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:inputType="number"/>

    <TextView 
        android:id="@+id/lblCoorY3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coorY3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp" />
    
    <EditText 
        android:id="@+id/TxtCoorY3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:inputType="number"/>
            
    <Button 
        android:id="@+id/BotonDibuja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dibuja"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"/>
    

</LinearLayout>
