<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView 
        android:id="@+id/lblDiam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diam"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp" />
    
    <EditText 
        android:id="@+id/TxtDiam"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:inputType="number"/>

    <TextView 
        android:id="@+id/lblDiaM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diaM"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp" />
    
    <EditText 
        android:id="@+id/TxtDiaM"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:inputType="number"/>
            
    <Button 
        android:id="@+id/BotonDibuja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dibuja"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"/>
    

</LinearLayout>