<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/lblLado1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lado1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"  />
    
    <EditText 
        android:id="@+id/TxtLado1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"/>

    <TextView 
        android:id="@+id/lblLado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lado2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp" />
    
    <EditText 
        android:id="@+id/TxtLado2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"/>
                
    <Button 
        android:id="@+id/BotonDibuja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dibuja"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp" />
    

</LinearLayout>
